- Atualização do componente correção de Stack Overflow

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ demo/UniSSUserControlsDemo.res
 package/SSUserControls.skincfg
 demo/UniSSUserControlsDemo.identcache
 demo/UniSSUserControlsDemo.dproj.local
+ProjetoUniUserControls.groupproj.local
