--- a/package/UniSSUserControls.dproj
+++ b/package/UniSSUserControls.dproj
@@ -1,6 +1,6 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-        <ProjectGuid>{B2D869B2-8AAB-47B5-BB24-E388772834CD}</ProjectGuid>
+        <ProjectGuid>{1D4B6BB8-95F1-400E-A391-F6E59777C40B}</ProjectGuid>
         <MainSource>UniSSUserControls.dpk</MainSource>
         <ProjectVersion>20.1</ProjectVersion>
         <FrameworkType>None</FrameworkType>
@@ -158,10 +158,27 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="..\src\UniSSUserControls.TUniSSUserControls.pas"/>
+        <DCCReference Include="rtl.dcp"/>
+        <DCCReference Include="vcl.dcp"/>
+        <DCCReference Include="dbrtl.dcp"/>
+        <DCCReference Include="vclFireDAC.dcp"/>
+        <DCCReference Include="FireDAC.dcp"/>
+        <DCCReference Include="FireDACCommonDriver.dcp"/>
+        <DCCReference Include="FireDACCommon.dcp"/>
+        <DCCReference Include="uniGUI29Core.dcp"/>
+        <DCCReference Include="uniTools29.dcp"/>
+        <DCCReference Include="uIndy29.dcp"/>
+        <DCCReference Include="soaprtl.dcp"/>
+        <DCCReference Include="xmlrtl.dcp"/>
+        <DCCReference Include="inet.dcp"/>
+        <DCCReference Include="vclimg.dcp"/>
+        <DCCReference Include="vcldb.dcp"/>
+        <DCCReference Include="vclwinx.dcp"/>
+        <DCCReference Include="bindengine.dcp"/>
         <DCCReference Include="..\src\Utils\UniSSUserControls.Utils.Geral.pas"/>
         <DCCReference Include="..\src\Entidades\UniSSUserControls.Entidade.SessaoUsuario.pas"/>
         <DCCReference Include="..\src\Conectores\FireDAC\UniSSUserControls.Conector.FireDAC.pas"/>
+        <DCCReference Include="..\src\UniSSUserControls.TUniSSUserControls.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
